[package]
name = "godbolt"
version = "0.1.1"
authors = ["Michael Flaherty <michaelwflaherty@me.com>"]
edition = "2018"
license = "LGPL-3.0"
readme = "README.md"
keywords = ["Godbolt"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
serde_json = "1.0"
base64 = "0.21.0"
urlencoding = "2.1.2"
serde = { version = "1.0.*", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros"] }